versioned_docs/version-14.0.10/installation/index.mdx
---
sidebar_position: 1
title: Installation
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import {VERSION} from '@site/docs/env.ts';
import {VideoPlayer} from '@site/src/components/VideoPlayer.tsx';

## Processing CLI tool

<Tabs>
  <TabItem
    value="windows"
    label="Windows 11"
    default
  >

1. Install Python 3.11 with [Chocolatey](https://chocolatey.org/install)

- Open PowerShell with administrator privileges
- Run the Chocolatey [installation command](https://chocolatey.org/install#install-step2)
- Wait for completion
- Install Python using the following command

```powershell
choco install python --version=3.11.9 -y
```

2. Download the <a href={`https://github.com/sound-scape-explorer/sound-scape-explorer/releases/download/v${VERSION}/sse-processing-${VERSION}.bat`}>installation script</a>

3. Double click on the script to install

<VideoPlayer src="/sse-14/windows-installation-cli.mp4" />

  </TabItem>
  <TabItem
    value="ubuntu"
    label="Ubuntu 24"
  >

1. Open a terminal

2. Install Python 3.11 with the following command

```bash
sudo add-apt-repository -y ppa:deadsnakes/ppa && \
sudo apt install -y python3.11 python3.11-distutils python3.11-dev python3-pip python3.11-venv && \
python3.11 --version
```

3. Navigate to your user defined folder

4. Download installation script

<CodeBlock language="bash">
  {`wget -q https://github.com/sound-scape-explorer/sound-scape-explorer/releases/download/v${VERSION}/sse-processing-${VERSION}.sh && \\
chmod +x sse-processing-${VERSION}.sh`}
</CodeBlock>

5. Run installation script

<CodeBlock language="bash">
  {`./sse-processing-${VERSION}.sh
# or from your file browser: right-click > Run as a Program`}
</CodeBlock>

<VideoPlayer src="/sse-14/ubuntu-installation-cli.mp4" />

  </TabItem>
  <TabItem
    value="macOS"
    label="macOS 15"
  >
1. Open terminal
2. Install [Homebrew](https://brew.sh/)

```bash
/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
```

3. Install Python 3.11

```bash
brew install python@3.11
```

4. Download installation script

<CodeBlock language="bash">
  {`curl -L -o sse-processing-${VERSION}.sh https://github.com/sound-scape-explorer/sound-scape-explorer/releases/download/v${VERSION}/sse-processing-${VERSION}.sh && \\
chmod +x sse-processing-${VERSION}.sh`}
</CodeBlock>

5. Run installation script

<CodeBlock language="bash">{`./sse-processing-${VERSION}.sh`}</CodeBlock>

:::warning
Unfortunately, macOS finder does not allow to open shell scripts with the
Terminal. You will have to manually run the above command at step 5 every time
you want to instantiate the CLI tool.
:::

<Tabs>
  <TabItem
    default
    value="Before installing Homebrew"
  >
    ![](/sse-14/installation/macos/001.png)
  </TabItem>
  <TabItem value="After installing Homebrew">
    ![](/sse-14/installation/macos/002.png)
  </TabItem>
  <TabItem value="Installing Python 3.11">
    ![](/sse-14/installation/macos/003.png)
  </TabItem>
  <TabItem value="Downloading installation script">
    ![](/sse-14/installation/macos/004.png)
  </TabItem>
  <TabItem value="Running installation script">
    ![](/sse-14/installation/macos/005.png)
  </TabItem>
</Tabs>
  </TabItem>
</Tabs>

## Desktop application

<Tabs>
  <TabItem
    value="windows"
    label="Windows 11"
    default
  >
Download and run <a href={`https://github.com/sound-scape-explorer/sound-scape-explorer/releases/download/v${VERSION}/sound-scape-explorer-${VERSION}.exe`}>{`sound-scape-explorer-${VERSION}.exe`}</a>

<VideoPlayer src="/sse-14/windows-installation-electron.mp4" />

  </TabItem>
  <TabItem
    value="ubuntu"
    label="Ubuntu 24"
  >
    Run the following command in your terminal.

    You will then have access to `sound-scape-explorer` application.

<CodeBlock language="bash">
  {`sudo -v && \\
wget https://github.com/sound-scape-explorer/sound-scape-explorer/releases/download/v${VERSION}/sound-scape-explorer-${VERSION}.deb && \\
sudo apt install ./sound-scape-explorer-${VERSION}.deb && \\
rm -f sound-scape-explorer-${VERSION}.deb && \\
sudo -k`}
</CodeBlock>

<VideoPlayer src="/sse-14/ubuntu-installation-electron.mp4" />

  </TabItem>
  <TabItem
    value="macOS"
    label="macOS 15"
  >
  Download and install <a href={`https://github.com/sound-scape-explorer/sound-scape-explorer/releases/download/v${VERSION}/sound-scape-explorer-${VERSION}.dmg`}>{`sound-scape-explorer-${VERSION}.dmg`}</a>

<Tabs>
  <TabItem
    default
    value="Drag-n-drop application"
  >
    ![](/sse-14/installation/macos/006.png)
  </TabItem>
  <TabItem value="Opening the standalone app">
    ![](/sse-14/installation/macos/008.png)
  </TabItem>
</Tabs>

:::warning

macOS may block the app with a "damaged" error due to Gatekeeper.

<div style={{width: '50%', height: '50%'}}>
  ![](/sse-14/installation/macos/007.png)
</div>

Run this command to fix it:

```bash
xattr -cr /Applications/sound-scape-explorer.app
```

Then open the app normally.

:::

  </TabItem>
</Tabs>
